# ghostpost

./: .env.example  .gitignore  AGENT_ARCHITECTURE.md  AGENT_QUICK_REFERENCE.md  AGENT_RESEARCH_INDEX.md  ARCHITECTURE.md  README.md  alembic.ini  ecosystem.config.cjs  pyproject.toml  requirements.txt
caddy/: Caddyfile
config/: ghost_research_defaults.md
docs/: AGENT_OPTIMIZATION_PLAN.md  AGENT_READINESS_PLAN.md  ARCHITECTURE.md  CAPABILITY_INVENTORY.md  CLI_FULL_COVERAGE_PLAN.md  CONTEXT_FORMAT_RESEARCH.md  DATABASE.md  EXECUTION_PHASES.md  FEATURES.md  GMAIL_SETUP.md  MASTER_PLAN.md  OPENCLAW_INTEGRATION.md  PHASE3_PLAN.md  PRD.md  SECURITY.md  SKILL_CONSOLIDATION_RESEARCH.md  api-reference.md  error-codes.md  ghost-research-batch-input-guide.md  security-model.md  state-machine.md
frontend/: index.html  package-lock.json  package.json
playbooks/: close-deal.md  follow-up-generic.md  negotiate-price.md  schedule-meeting.md
scripts/: reauth_gmail.py  setup_sudo.sh  smoke_test.sh
src/: config.py  logging_config.py  main.py  test_endpoint.py
tests/: audit_api_auth.py  audit_api_endpoints.py  audit_cli.py  audit_context_files.py  audit_data_integrity.py  audit_end_to_end.py  audit_gmail_integration.py  audit_llm_resilience.py  audit_security_commitment.py  audit_security_injection.py  audit_state_machine.py  audit_websocket.py  conftest.py  test_anomaly_detector.py  test_available_actions.py  test_batch.py  test_batch_import.py  test_brief.py  test_changelog.py  test_cli_full_coverage.py  test_cli_json_flag.py  test_commitment_detector.py  test_composer.py  (+21 more)
(+139 files in other folders)
